fixed nav list icon cutoff

--- a/src/components/ui/header/navbar/Navbar.module.css
+++ b/src/components/ui/header/navbar/Navbar.module.css
@@ -49,7 +49,7 @@
 	margin-block-start: 0;
 	margin-block-end: 0;
 	height: calc(100vh - var(--header-height));
-	margin-top: var(--header-height);
+	margin-top: calc(var(--header-height) + 2rem);
 	width: 100vw;
 	top: 0;
 	left: -100vw;
